--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seed.js",
+    "verify-seed": "node scripts/verify-seed.js",
+    "update-admin": "node scripts/update-admin.js",
+    "check-admin": "node scripts/check-admin.js",
     "setup-env": "node setup-env.js"
   },
   "keywords": ["optical", "ecommerce", "dashboard"],
